--- a/package.json
+++ b/package.json
@@ -3,11 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "@types/jest": "^23.3.9",
+    "@types/node": "^10.12.9",
+    "@types/react": "^16.7.6",
+    "@types/react-dom": "^16.0.9",
+    "apollo": "<2",
+    "apollo-boost": "^0.1.21",
+    "apollo-client": "^2.4.6",
+    "graphql": "14",
+    "graphql-tag": "^2.10.0",
+    "react": "^16.7.0-alpha.2",
+    "react-apollo": "2.2",
+    "react-dom": "^16.7.0-alpha.2",
+    "react-scripts": "2.1.1",
+    "typescript": "^3.1.6"
   },
   "scripts": {
+    "codegen": "apollo codegen:generate --outputFlat  --schema=schema.json --target=typescript src/types",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
