--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "apollo-client": "^2.4.6",
     "graphql": "14",
     "graphql-tag": "^2.10.0",
+    "now": "^12.1.3",
     "react": "^16.7.0-alpha.2",
     "react-apollo": "2.2",
     "react-dom": "^16.7.0-alpha.2",
@@ -22,6 +23,7 @@
     "codegen": "apollo codegen:generate --outputFlat  --schema=schema.json --target=typescript src/types",
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "yarn run build && now build --public --name powergif",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
