--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "@types/node": "^10.12.9",
     "@types/react": "^16.7.6",
     "@types/react-dom": "^16.0.9",
-    "apollo": "<2",
+    "apollo": "^2.1.3",
     "apollo-boost": "^0.1.21",
     "apollo-client": "^2.4.6",
-    "graphql": "14",
+    "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
     "now": "^12.1.3",
     "react": "^16.7.0-alpha.2",
@@ -20,7 +20,7 @@
     "typescript": "^3.1.6"
   },
   "scripts": {
-    "codegen": "apollo codegen:generate --outputFlat  --schema=schema.json --target=typescript src/types",
+    "codegen": "apollo client:codegen  --globalTypesFile=src/types/.ignore --outputFlat  --localSchemaFile=schema.json --target=typescript src/types",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "deploy": "yarn run build && now build --public --name powergif",
