--- a/package.json
+++ b/package.json
@@ -4,11 +4,20 @@
   "private": true,
   "dependencies": {
     "@types/jest": "23.3.10",
+    "@types/lodash.get": "^4.4.4",
     "@types/node": "10.12.12",
     "@types/react": "16.7.13",
     "@types/react-dom": "16.0.11",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "apollo": "^2.1.7",
+    "apollo-boost": "^0.1.22",
+    "apollo-client": "^2.4.7",
+    "graphql": "^14.0.2",
+    "graphql-tag": "^2.10.0",
+    "lodash.get": "^4.4.2",
+    "now": "^12.1.9",
+    "react": "^16.7.0-alpha.2",
+    "react-apollo": "^2.3.2",
+    "react-dom": "^16.7.0-alpha.2",
     "react-scripts": "2.1.1",
     "typescript": "3.2.2"
   },
